objects/AcctSeed__Binding__mdt/fields/AcctSeed__Description__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Description__c</fullName>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>