objects/AcctSeed__Binding__mdt/fields/AcctSeed__Namespace__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Namespace__c</fullName>
    <label>Namespace</label>
    <length>100</length>
    <type>Text</type>
</CustomField>