objects/AcctSeed__Binding__mdt/fields/AcctSeed__To__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__To__c</fullName>
    <label>To</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>