objects/AcctSeed__Binding__mdt/fields/AcctSeed__Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>